# derust

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  rust-toolchain
crates/derust/: Cargo.toml  README.md
crates/derust/src/: lib.rs
crates/derust/src/awsx/: README.md  mod.rs  secrets_manager.rs  sqs.rs
crates/derust/src/awsx/sqsx/: consumer.rs  mod.rs  runner.rs
crates/derust/src/databasex/: repository.rs
crates/derust/src/databasex/postgresx/: README.md  database.rs  mod.rs  pg_connection_repository.rs  pg_option_transaction_repository.rs  pg_option_transaction_repository_and_metrics.rs  pg_transaction_repository.rs  pg_transaction_repository_and_metrics.rs
crates/derust/src/envx/: README.md  environment.rs  loader.rs
crates/derust/src/growthbookx/: README.md  mod.rs
crates/derust/src/http_clientx/: README.md  client.rs
crates/derust/src/httpx/: auth_extractor.rs  config.rs  context.rs  extension.rs  health.rs  mod.rs  server.rs  tags.rs
crates/derust/src/httpx/middlewares/: log.rs  mod.rs  sensitive_headers.rs  timeout.rs
crates/derust/src/httpx/request/: json_request.rs  mod.rs
crates/derust/src/httpx/response/: error.rs  json.rs  text.rs
crates/derust/src/kafkax/: consumer.rs  mod.rs  runner.rs
crates/derust/src/metricx/: mod.rs
crates/derust/src/metricx/meters/: counter.rs  gauge.rs  mod.rs  money.rs  tags.rs  timer.rs
crates/derust/src/metricx/registries/prometheus/: README.md  mod.rs
crates/derust/src/metricx/registries/statsd/: README.md  mod.rs
crates/derust/src/outboxx/: README.md  http.rs  mod.rs  runner.rs  sns.rs  sqs.rs
crates/derust/src/sduix/: mod.rs  theme.rs
crates/derust/src/sduix/flutter/: mod.rs
crates/derust/src/sduix/flutter/mirai/: align.rs  align_dialog.rs  alignment_geometry.rs  app_bar.rs  app_bar_theme.rs  border.rs  border_radius.rs  border_side.rs  bottom_app_bar_theme.rs  bottom_nav_bar_theme_data.rs  bottom_navigation_view.rs  bottom_sheet_theme_data.rs  box_constraints.rs  box_decoration.rs  box_shadow.rs  button_style.rs  card.rs  card_theme_data.rs  center.rs  check_box.rs  chip.rs  circle_avatar.rs  color_scheme.rs  column.rs  container.rs  decoration_image.rs  default_bottom_navigation_controller.rs  default_tab_controller.rs  dialog_theme.rs  edge_insets.rs  elevated_button.rs  expanded.rs  filled_button.rs  flexible.rs  floating_action_button.rs  floating_action_button_theme_data.rs  form.rs  form_field_validator.rs  fractionally_sized_box.rs  gradient.rs  (+19 more)
crates/derust/src/tracex/: README.md  initialize.rs
crates/example/: Cargo.toml
crates/example/http_collection/: check_up.http
crates/example/src/: main.rs
crates/rustboot/: Cargo.toml  README.md
crates/rustboot/src/: lib.rs
crates/rustboot/src/awsx/: README.md  mod.rs  secrets_manager.rs  sns.rs  sqs.rs
crates/rustboot/src/databasex/: mod.rs  repository.rs
crates/rustboot/src/databasex/postgresx/: README.md  database.rs  mod.rs  pg_connection_repository.rs  pg_transaction_repository_and_metrics.rs  repository.rs
crates/rustboot/src/envx/: README.md  environment.rs  error.rs  loader.rs  mod.rs
crates/rustboot/src/growthbookx/: README.md  mod.rs
crates/rustboot/src/http_clientx/: README.md  client.rs
crates/rustboot/src/httpx/: axum.rs  context.rs  extension.rs  mod.rs  prometheus.rs  server.rs  tags.rs
crates/rustboot/src/httpx/middlewares/: log.rs  timeout.rs
crates/rustboot/src/httpx/response/: error.rs  json.rs  mod.rs
crates/rustboot/src/metricx/meters/: counter.rs  gauge.rs  money.rs  tags.rs  timer.rs
crates/rustboot/src/metricx/registries/: mod.rs
crates/rustboot/src/metricx/registries/prometheus/: README.md  mod.rs
crates/rustboot/src/metricx/registries/statsd/: README.md  mod.rs
crates/rustboot/src/outboxx/: README.md  http.rs  mod.rs  runner.rs  sns.rs  sqs.rs
crates/rustboot/src/postgresx/: database.rs  mod.rs  repository.rs
crates/rustboot/src/tracex/: README.md  initialize.rs  log.rs  mod.rs
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/database/postgres/: Cargo.toml  docker-compose.yaml
examples/database/postgres/database/migrations/: 1_foo_table.sql
examples/database/postgres/src/: main.rs
examples/env/basic/: Cargo.toml
examples/env/basic/src/: main.rs
examples/env/secrets-manager/: .env  Cargo.toml  docker-compose.yaml
examples/env/secrets-manager/docker/: localstack.sh
examples/env/secrets-manager/docker/localstack/: secrets-manager.json
examples/env/secrets-manager/src/: main.rs
examples/growthbook/: Cargo.toml  docker-compose.yaml
examples/growthbook/src/: main.rs
examples/http_client/: Cargo.toml
examples/http_client/src/: main.rs
examples/metrics/prometheus/: Cargo.toml  docker-compose.yaml
examples/metrics/prometheus/docker/: prometheus.yml
examples/metrics/prometheus/src/: main.rs
examples/metrics/statsd/: Cargo.toml  docker-compose.yaml
examples/metrics/statsd/docker/: statsd_mapping.yml
examples/metrics/statsd/src/: main.rs
examples/outbox/: .env  Cargo.toml
examples/outbox/src/: main.rs
examples/trace/: Cargo.toml
examples/trace/src/: main.rs
src/: lib.rs
src/envx/: environment.rs  error.rs  mod.rs
src/httpx/: context.rs  extension.rs  mod.rs  server.rs
src/httpx/middlewares/: error_handler.rs  log.rs  mod.rs  request_id.rs  timeout.rs  tracer.rs
