[workspace]
resolver = "2"
members = ["crates/*"]
exclude = ["examples/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Deroldo <diogoderoldo@gmail.com>"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42.0", features = ["full"] }

# Http
axum = { version = "0.7.9", default-features = true, features = ["macros", "tokio"] }
tower-http = { version = "0.6.2", features = ["catch-panic", "timeout", "trace", "request-id", "util", "sensitive-headers", "compression-gzip"] }
hyper = { version = "1.5.1" }

# Http client
reqwest = { version = "0.12.9", features = ["http2", "default-tls", "default", "json", "gzip"] }
reqwest-middleware = { version = "0.4.0", features = ["json", "http2", "rustls-tls"] }
reqwest-tracing = { version = "0.5.4", features = ["opentelemetry_0_26"] }

# Json
serde = { version = "1.0.215", features = ["derive"]}
serde_json = { version = "1.0.133" }

# Error
thiserror = { version = "2.0.4" }

# Outbox
outbox-pattern-processor = { version = "0.3.6" }

# Feture toggle / feature flag
#growthbook-rust-sdk = { version = "0.1.0" } # wating for https://github.com/will-bank/growthbook-rust-sdk/pull/5
growthbook-sdk-rust = { version = "0.1.1" } # fork

# SQL
sqlx = { version = "0.8.2", features = ["json", "chrono", "bigdecimal", "postgres", "uuid", "rust_decimal", "migrate", "runtime-tokio"] }

# AWS
aws-sdk-sqs = { version = "1.50.0" }
aws-sdk-sns = { version = "1.51.0" }
aws-sdk-secretsmanager = { version = "1.54.0" }
aws-config = { version = "1.5.7", features = ["behavior-version-latest"] }

# Observability
tracing = { version = "0.1.41", features = ["attributes", "tracing-attributes"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "std"] }
axum-tracing-opentelemetry = { version = "0.24.1", features = ["tracing_level_info"]}
opentelemetry-otlp = { version = "0.27.0", default-features = false, features = ["http", "populate-logs-event-name", "logs", "reqwest-client", "tracing", "serde", "integration-testing", "reqwest", "metrics", "reqwest-rustls", "http-proto", "tls"] }
init-tracing-opentelemetry = { version = "0.24.1", features = ["otlp", "opentelemetry-otlp", "tracer", "tracing_subscriber_ext"] }
opentelemetry = { version = "0.27.1" }
tracing-opentelemetry = { version = "0.28.0" }
opentelemetry-http = { version = "0.27.0", features = ["reqwest"] }
cadence = { version = "1.5.0" }
metrics-exporter-statsd = { version = "0.9.0" }
metrics-exporter-prometheus = { version = "0.16.0" }
metrics = { version = "0.24.0" }

# Utils
lazy_static = { version = "1.5.0" }
async-trait = { version = "0.1.83" }
bytes = { version = "1.9.0" }
uuid = { version = "1.11.0", features = ["v7", "fast-rng", "serde"] }
wg = { version = "0.9.2" }
chrono = { version = "0.4.38", features = ["serde"] }
http-body-util = { version = "0.1.2" }
regex = { version = "1.11.1" }
dotenv = { version = "0.15.0" }
config = { version = "0.15.3" }
