[workspace]
resolver = "2"
members = ["crates/*"]
exclude = ["examples/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Deroldo <diogoderoldo@gmail.com>"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.46.0", features = ["full"] }

# Http
axum = { version = "0.8.4", default-features = true, features = ["macros", "tokio"] }
tower-http = { version = "0.6.6", features = ["catch-panic", "timeout", "trace", "request-id", "util", "sensitive-headers", "compression-gzip"] }
tower-layer = { version = "0.3.3" }
hyper = { version = "1.6.0" }

# Http client
reqwest = { version = "0.12.22", features = ["http2", "default-tls", "default", "json", "gzip"] }
reqwest-middleware = { version = "0.4.2", features = ["json", "http2", "rustls-tls"] }
reqwest-tracing = { version = "0.5.8", features = ["opentelemetry_0_26"] }

# Json
serde = { version = "1.0.219", features = ["derive"]}
serde_json = { version = "1.0.140" }

# Error
thiserror = { version = "2.0.12" }

# Outbox
outbox-pattern-processor = { version = "0.3.6" }

# Feture toggle / feature flag
#growthbook-rust-sdk = { version = "0.1.0" } # wating for https://github.com/will-bank/growthbook-rust-sdk/pull/5
growthbook-sdk-rust = { version = "0.1.1" } # fork

# SQL
sqlx = { version = "0.8.6", features = ["json", "chrono", "bigdecimal", "postgres", "uuid", "rust_decimal", "migrate", "runtime-tokio"] }

# AWS
aws-sdk-sqs = { version = "1.74.0" }
aws-sdk-sns = { version = "1.75.0" }
aws-sdk-secretsmanager = { version = "1.78.0" }
aws-config = { version = "1.8.1", features = ["behavior-version-latest"] }

# Observability
tracing = { version = "0.1.41", features = ["attributes", "tracing-attributes"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "std"] }
axum-tracing-opentelemetry = { version = "0.29.0", features = ["tracing_level_info"]}
opentelemetry-otlp = { version = "0.30.0", default-features = false, features = ["http", "logs", "reqwest-client", "tracing", "serde", "integration-testing", "reqwest", "metrics", "reqwest-rustls", "http-proto", "tls"] }
init-tracing-opentelemetry = { version = "0.29.0", features = ["otlp", "opentelemetry-otlp", "tracer", "tracing_subscriber_ext"] }
opentelemetry = { version = "0.30.0" }
tracing-opentelemetry = { version = "0.31.0" }
opentelemetry-http = { version = "0.30.0", features = ["reqwest"] }
cadence = { version = "1.6.0" }
metrics-exporter-statsd = { version = "0.9.0" }
metrics-exporter-prometheus = { version = "0.17.2" }
metrics = { version = "0.24.2" }

# Utils
lazy_static = { version = "1.5.0" }
async-trait = { version = "0.1.88" }
bytes = { version = "1.10.1" }
uuid = { version = "1.17.0", features = ["v7", "fast-rng", "serde"] }
wg = { version = "0.9.2" }
chrono = { version = "0.4.41", features = ["serde"] }
http-body-util = { version = "0.1.3" }
regex = { version = "1.11.1" }
dotenv = { version = "0.15.0" }
config = { version = "0.15.11" }
openssl = { version = "0.10.73", features = ["vendored"] }
flate2 = { version = "1.1.2" }
