[workspace]

[package]
name = "derust-outbox"
version = "0.1.0"
edition = "2021"

[dependencies]
derust = { path = "../../crates/derust", features = ["outbox"] }

tokio = { version = "1.42.0", features = ["full"] }
axum = { version = "0.7.9", default-features = true, features = ["macros", "tokio"] }
serde = { version = "1.0.215", features = ["derive"]}
serde_json = { version = "1.0.133" }
sqlx = { version = "0.8.2" }
uuid = { version = "1.11.0", features = ["v7"] }