[workspace]

[package]
name = "derust-trace"
version = "0.1.0"
edition = "2021"

[dependencies]
derust = { path = "../../crates/derust" }

tokio = { version = "1.43.0", features = ["full"] }
axum = { version = "0.8.1", default-features = true, features = ["macros", "tokio"] }
serde = { version = "1.0.218", features = ["derive"]}