[workspace]

[package]
name = "derust-env-basic"
version = "0.1.0"
edition = "2021"

[dependencies]
derust = { path = "../../../crates/derust" }

tokio = { version = "1.45.1", features = ["full"] }
axum = { version = "0.8.4", default-features = true, features = ["macros", "tokio"] }
serde = { version = "1.0.219", features = ["derive"]}