[workspace]

[package]
name = "derust-metrics-prometheus"
version = "0.1.0"
edition = "2021"

[dependencies]
derust = { path = "../../../crates/derust", features = ["prometheus"] }

tokio = { version = "1.43.0", features = ["full"] }
axum = { version = "0.8.1", default-features = true, features = ["macros", "tokio"] }
serde = { version = "1.0.218", features = ["derive"]}
regex = { version = "1.11.1" }