[workspace]

[package]
name = "derust-metrics-statsd"
version = "0.1.0"
edition = "2021"

[dependencies]
derust = { path = "../../../crates/derust", features = ["statsd"] }

tokio = { version = "1.42.0", features = ["full"] }
axum = { version = "0.7.9", default-features = true, features = ["macros", "tokio"] }
serde = { version = "1.0.215", features = ["derive"]}
regex = { version = "1.11.1" }